@@ -5,6 +5,8 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
+<xsl:import href="@GDU_GETTEXT@"/>
+
 <xsl:param name="help_icon"/>
 <xsl:param name="help_icon_size"/>
 
@@ -23,6 +25,19 @@
 <xsl:param name="theme.color.yellow_border"/>
 
 <xsl:template match="toc">
+  <xsl:variable name="direction">
+    <xsl:call-template name="l10n.direction"/>
+  </xsl:variable>
+  <xsl:variable name="left">
+    <xsl:call-template name="l10n.align.start">
+      <xsl:with-param name="direction" select="$direction"/>
+    </xsl:call-template>
+  </xsl:variable>
+  <xsl:variable name="right">
+    <xsl:call-template name="l10n.align.end">
+      <xsl:with-param name="direction" select="$direction"/>
+    </xsl:call-template>
+  </xsl:variable>
   <yelp:document href="{@id}">
     <html>
       <head>
@@ -40,7 +55,7 @@
           margin-top: 12px;
           margin-left: 12px;
           margin-right: 12px;
-          padding-left: 204px;
+          padding-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 204px;
           padding-top: 0.2em;
           padding-bottom: 0.2em;
           -moz-border-radius: 6px;
@@ -52,9 +67,8 @@
           <xsl:value-of select="$theme.color.text"/><xsl:text>;
         }
         h1 img {
-          position: absolute;
-          top: 15px;
-          right: 18px;
+          float: </xsl:text><xsl:value-of select="$right"/><xsl:text>;
+          margin-</xsl:text><xsl:value-of select="$right"/><xsl:text>: 18px;
         }
 	h2 h3 {
           color: </xsl:text><xsl:value-of select="$theme.color.text"/><xsl:text>;
@@ -63,10 +77,10 @@
         div[class~="leftbar"] {
           position: absolute;
           top: 4em;
-          left: 12px;
+          </xsl:text><xsl:value-of select="$left"/><xsl:text>: 12px;
           width: 192px;
           min-height: 192px;
-          text-align: left;
+          text-align: </xsl:text><xsl:value-of select="$left"/><xsl:text>;
           /* padding-top: </xsl:text>
           <xsl:value-of select="$help_icon_size"/><xsl:text>px;
           background-image: url("</xsl:text>
@@ -79,7 +93,7 @@
         div[class~="leftbackground"] {
           position: absolute;
           top: 4em;
-          left: 1px;
+          </xsl:text><xsl:value-of select="$left"/><xsl:text>: 1px;
           width: 210px;
           min-height: 192px;
           text-align: center;
@@ -93,12 +107,9 @@
           opacity: .1;          
         }
         div[class~="rightbar"] {
-          margin-left: 216px;
-          padding-bottom: 1em;
-          padding-top: 1em;
-          padding-left: 1em;
-          padding-right: 1em;
-          margin-right: 12px;
+          margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 216px;
+          margin-</xsl:text><xsl:value-of select="$right"/><xsl:text>: 12px;
+          padding: 1em;
           background-color: </xsl:text><xsl:value-of select="$theme.color.background"/><xsl:text>;
           color: </xsl:text><xsl:value-of select="$theme.color.text"/><xsl:text>;
           -moz-border-radius: 8px;
@@ -106,34 +117,47 @@
         ul { margin-left: 0em; padding-left: 0em; }
         li[class~="toclist"] {
           margin-top: 0.3em;
-          margin-left: 0em;
-          padding-left: 0em;
+          margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0em;
+          padding-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0em;
           font-size: 1.2em;
           list-style-type: none;
         }
 	li li[class~="toclist"] {
-	  padding-left: 0.8em;
+	  padding-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0.8em;
 	  font-size: 0.8em;
         }
 	li li li[class~="toclist"] {
-	  padding-left: 0.8em;
+	  padding-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0.8em;
 	  font-size: 0.6em;
         }
         li[class~="toc"] {
-          margin-left: 0em;
+          margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0em;
           font-size: 1.2em;
           padding-top: 0.5em;
           list-style-type: none;
         }
-        dl { margin-left: 0em; padding-left: 0em; }
+        dl {
+          margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0em;
+          padding-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 0em;
+        }
         dt { font-size: 1.2em; margin-top: 1em; }
-        dd { margin-left: 1em; margin-top: 0.5em; }
+        dd {
+          margin-</xsl:text><xsl:value-of select="$left"/><xsl:text>: 1em;
+          margin-top: 0.5em;
+        }
         a { text-decoration: none; color: </xsl:text><xsl:value-of select="$theme.color.link"/><xsl:text>; }
         a:hover { text-decoration: underline; }
         </xsl:text></style>
       </head>
       <body>
-        <xsl:apply-templates mode="body.mode" select="."/>
+        <div>
+          <xsl:if test="$direction = 'ltr' or $direction='rtl'">
+            <xsl:attribute name="dir">
+              <xsl:value-of select="$direction"/>
+            </xsl:attribute>
+          </xsl:if>
+          <xsl:apply-templates mode="body.mode" select="."/>
+        </div>
       </body>
     </html>
   </yelp:document>
